# orb

./: .clang-format  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  GEMINI.md  README.md  bootstrap_and_gen.bat  bootstrap_build_tool.bat  bootstrap_gen.bat  bootstrap_project.bat  build.sh  build_hot.bat  build_tool_debug.args  build_tool_log.txt  build_vs.bat  build_vs_2022 - CLANG.bat  build_vs_2022 - MSVC (CHOICE).bat  build_vs_2022 - MSVC (DYNAMIC).bat  build_vs_2022 - MSVC (STATIC).bat  build_vs_2022 - OLD.bat  build_vs_2022.bat  build_vs_2026.bat  clean_build.bat  clean_build_project.bat  comment_style.txt  compile_build_tool.bat  compile_build_tool_no_args.bat  compile_commands.json  config.cfg  cook_example.bat  example.c  notes.txt  open_orb.bat  open_orb_build.bat  orb.code-workspace  orb.targets  orb_build.code-workspace  orb_dev.code-workspace  orb_runtime.code-workspace  (+6 more)
.claude/: settings.local.json
assets/: build_tool_debug.args
base/: CMakeLists.txt  base.c  base.h  base_string.c  orb.h  standard.c
build_dynamic/: CMakeCache.txt  cmake_install.cmake
build_dynamic/engine/: cmake_install.cmake
build_dynamic/engine/app/: cmake_install.cmake
build_dynamic/engine/base/: cmake_install.cmake
build_dynamic/engine/core/: cmake_install.cmake
build_dynamic/engine/game/: cmake_install.cmake
build_dynamic/engine/module/: cmake_install.cmake
build_dynamic/engine/sys/: cmake_install.cmake
build_project/orb_build/: orb_build.slnx
cmake/: unlock_pdb.cmake
common/: CMakeLists.txt  api_registry.h
config/: boot.ini
docs/: ARCH.md  ARCH_MODULAR.md  BOOT.md  LinuxPortPlan.txt  README.md  TODO.txt  Visual Studio Code.txt  build_hot_command_setup.txt  build_tool.txt  gui.md  ignore_me.txt  planning.txt  project.txt
editor/ui/: CMakeLists.txt
editor/ui/source/: ui.c
engine/: CMakeLists.txt  engine.c  engine.h  engine_api.c  engine_api.h  engine_main.c  engine_test.c  orb.h
engine/app/: CMakeLists.txt  app.c  app.h  app_api.h
engine/base/: CMakeLists.txt  base.c  base.h  library.c  memory.c  module.c  standard.c  standard.h
engine/base/include/: base.h
engine/base/source/: base.c
engine/core/: CMakeLists.txt  bits.c  core.c  core.h  core_api.c  core_api.h  core_module.c  cvar.c  cvar.h  cvar_cmd.c  cvar_config.c  cvar_system.c  debug.c  memory_system.c  module.h  module_get_api.h  module_system.c  module_system.h  reflect_system.c  reflection.c  reflection.h  sid_system.c  string_pool.c  string_pool.h
engine/core/cvar/: cmd.h  cmd_buffer.c  cmd_parse.c  cvar.c  cvar.h  cvar.natvis  cvar_cmd.c  cvar_config.c  string_pool.c  string_pool.h
engine/core/include/: plugin.h
engine/core/memory/: memory.c
engine/core/module/: core_module.c  engine_module.c  module_api.h  module_sys.c  module_sys.h
engine/core/reflect/: reflect.h  reflect.natvis  reflect_access.c  reflect_module.c  reflect_print.c  reflect_registry.c  reflect_test.c  reflect_transact.c  reflection.c  reflection.h  registry.c  str_intern.c  str_intern.h
engine/core/sid/: sid.c  sid.h
engine/core/source/: core_plugin.c
engine/core/test/: test_core_cvar.c  test_core_sid.c
engine/game/: game.c  game.h  game_api.h
engine/module/: CMakeLists.txt  module.c  module.h  module_api.h  module_sys_api.h
engine/platform/: CMakeLists.txt  platform.c  platform.h  platform_api.c  platform_virtual.c
engine/platform/win/: win_tick.c
engine/platform_app/: CMakeLists.txt  platform_app.c  platform_app.h  platform_app_api.h
engine/platform_sys/: CMakeLists.txt  platform_sys.c  platform_sys.h  platform_sys_api.h
engine/platform_sys/win/: win_console_input.c  win_file.c  win_file_watch.c
engine/runtime/modules/audio/: CMakeLists.txt  audio.c  audio_api.h
engine/runtime/modules/example/: CMakeLists.txt  example.c  example_api.h
engine/runtime/modules/render/: CMakeLists.txt  render.c  render.h  render_api.h
engine/services/jobs/: job_system.c
engine/sys/: CMakeLists.txt  sys.c  sys.h  sys_api.h
engine/sys/win/: win_console_input.c  win_file.c  win_file_watch.c  win_library.c
engine/systems/render/: CMakeLists.txt  render.c  render.h  render_api.h
example_gen/: -out.generated.c  -out.generated.h
fonts/: cascadia_mono_16.orb_font  cascadia_mono_20.orb_font  jetbrains_bold_24.orb_font  jetbrains_regular_10.orb_font  jetbrains_regular_12.orb_font  jetbrains_regular_14.orb_font  jetbrains_regular_16.orb_font  jetbrains_regular_24.orb_font  jetbrains_regular_8.orb_font  proggy_tiny_16.orb_font
game/: CMakeLists.txt  game.c  game.h
hosts/: CMakeLists.txt
hosts/engine/: engine_api.c  engine_api.h  engine_main.c  engine_test.c
my_project/: clean_build.bat  my_project.code-workspace  orb.targets
my_project/src/: main.c
old_build/: CMakeCache.txt  cmake_install.cmake
projects/sample_game/: CMakeLists.txt  sample_game.c  sample_game.h
runtime/: CMakeLists.txt  runtime.c
runtime_modules/audio/: audio.c  audio_api.h
runtime_modules/example/: example.c
runtime_modules/render/: render.c  render_api.h
source/: engine_api.h  orb.h
source/base/: base.c  base.h  base_main.c  base_test.c  base_ub.c  bit.c  bit.h  char.c  char.h  fmt.c  fmt.h  hash.c  math.c  math.h  mem.c  mem.h  standard.c  standard.h  str.c  str.h  str_arena.c  str_arena.h  str_buf.c  str_buf.h  str_test.c  test.c  test.h
source/c11/: c11_di.c  c11_test.c
source/developer/dev_build/: dev_build.c  dev_build.h
source/editor/: editor.c  editor.h  editor_api.h
source/engine/: planning.txt
source/game/: CMakeLists.txt  game.c  game.h  game_api.h
source/runtime/: host.h  run.c  run.h  run_api.c  run_host.c  run_host.h  runtime.c  runtime.h  runtime_api.h  runtime_host.h
source/runtime_modules/render/: CMakeLists.txt  render.c  render.h  render_api.c  render_api.h
tools/asset_tool/: CMakeLists.txt  asset_tool.c
tools/build_tool/: CMakeLists.txt  build.h
tools/editor/: CMakeLists.txt  editor_main.c
tools/engine/: CMakeLists.txt  engine.mf  engine_main.c
tools/loader/: CMakeLists.txt  temp_main.c
tools/loader/include/: api_registry.h  loader.h
tools/loader/source/: loader.c
(+697 files in other folders)
